# swiftOS

./: .gitignore  README.md  cargo.toml  send_kernel.sh
boot_loader/: Cargo.toml  Makefile
boot_loader/.cargo/: config
boot_loader/ext/: init.S  layout.ld
boot_loader/src/: console.rs  lib.rs  mem.rs  mutex.rs  shell.rs
kernel/: Cargo.toml  Makefile  Xargo.toml
kernel/ext/: init.S  layout.ld
kernel/src/: lib.rs  mem.rs
pi/: Cargo.toml
pi/src/: gpio.rs  lib.rs  timer.rs  uart.rs
stack-vec/: Cargo.toml
stack-vec/src/: lib.rs  tests.rs
std/: Cargo.toml
std/src/: io.rs  lib.rs  mem.rs  mutex.rs  panic.rs  stack_vec.rs
std/src/volatile/: macros.rs  mod.rs  traits.rs
std/src/xmodem/: mod.rs  progress.rs  read_ext.rs
ttywrite/: Cargo.toml  test.sh
ttywrite/src/: main.rs  parsers.rs
ttywrite/src/xmodem/: mod.rs
volatile/: Cargo.toml
volatile/src/: lib.rs  macros.rs  traits.rs
xmodem/: Cargo.toml
xmodem/src/: lib.rs  progress.rs  read_ext.rs  tests.rs
