[package]
name = "boot_loader"
version = "0.1.0"
authors = ["f"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true


[dependencies]
pi = { path = "../pi", features = ["std"] }
stack-vec = { path = "../stack-vec/" }
