[package]
name = "kernel"
version = "0.1.0"
authors = ["f"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true


[dependencies]
pi = { path = "../pi"}
std = {path = "../std"}